# napari-animation

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  codecov.yml  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.md  feature_request.md
.github/workflows/: deploy_docs.yml  plugin_preview.yml  test_and_deploy.yml
.napari/: config.yml
docs/: _config.yml  _toc.yml  conf.py  gallery.md  gallery_conf.py  index.md  requirements.txt
docs/_templates/: navbar-project.html
docs/binder/: requirements.txt
docs/developers/: contributing.md
docs/examples/: README.md  animate2D.py  animate3D.py  animateMixed.py  ease_function.py  example.py  interactive_animation.py  programmatic_notebook_example.ipynb
docs/stylesheets/: extra.css
examples/: animate.py  animate2D.py  animate3D.py  animateMixed.py  ease_function.ipynb  ease_function.py  example.py  interactive_animation.py  layer_plane_example.py  layer_planes.py  programmatic_notebook_example.ipynb
napari_animation/: __init__.py  _enum_compat.py  _hookimpls.py  animation.py  easing.py  frame_sequence.py  interpolation.py  key_frame.py  preview_worker.py  utils.py  viewer_state.py
napari_animation/_qt/: __init__.py  animation_widget.py  animationslider_widget.py  camera_spline_widget.py  frame_widget.py  frameslider_widget.py  keyframelistcontrol_widget.py  keyframeslist_widget.py  playbutton_widget.py  save_dialog.py  save_widget.py  savedialog_widget.py
napari_animation/_qt/_tests/: test_animation_widget.py  test_play.py
napari_animation/_qt/dialogs/: __init__.py  save_dialog.py
napari_animation/_tests/: conftest.py  fixtures.py  test_animation.py  test_easing.py  test_enum_compat.py  test_frame_sequence.py  test_interpolation.py  test_utils.py
napari_animation/interpolation/: __init__.py  base_interpolation.py  interpolation_constants.py  typing.py  utils.py  viewer_state_interpolation.py
napari_animation/viewer_state_interpolation/: base_interpolation.py  interpolation_constants.py  utils.py  viewer_state_interpolation.py
src/napari_animation/: __init__.py  _version.py  animation.py  frame_sequence.py  key_frame.py  napari.yaml  utils.py  viewer_state.py
src/napari_animation/_qt/: __init__.py  animation_widget.py  frame_widget.py  keyframelistcontrol_widget.py  keyframeslist_widget.py  savedialog_widget.py  timeline_widget.py
src/napari_animation/_qt/_tests/: test_animation_widget.py
src/napari_animation/_tests/: test_animation.py  test_frame_sequence.py  test_interpolation.py  test_utils.py
src/napari_animation/interpolation/: __init__.py  base_interpolation.py  interpolation_constants.py  typing.py  utils.py  viewer_state_interpolation.py
tests/: conftest.py  test_easing.py  test_enum_compat.py  test_utils.py
tests/_qt/: test_animation_widget.py
