[project]
name = "napari-animation"
dynamic = ["version"]
description = "A plugin for making animations in napari."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "Nicholas Sofroniew" },
  { name = "Alister Burt" },
  { name = "Guillaume Witz" },
  { name = "Faris Abouakil" },
  { name = "Talley Lambert" },
  { name = "napari contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Visualization",
  "Framework :: napari",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"
# napari can be included in dependencies if napari imports are required.
# However, you should not include napari[all], napari[qt],
# or any other Qt bindings directly (e.g. PyQt5, PySide2).
# See best practices: https://napari.org/stable/plugins/building_a_plugin/best_practices.html
dependencies = [
    "imageio",
    "imageio-ffmpeg",
    "napari>=0.5",
    "npe2",
    "numpy",
    "qtpy",
    "scipy",
    "superqt",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
# Allow easily installation with the full, default napari installation
# (including Qt backend) using napari-animation[all].
all = ["napari[all]"]

[dependency-groups]
doc = [
  "matplotlib",
  "myst-nb",
  "napari-sphinx-theme>=1.1.1",
  "sphinx>=8.1.3",
  "sphinx-autobuild",
  "sphinx-copybutton",
  "sphinx-external-toc",
  "sphinx-favicon",
  "sphinx-gallery",
  "sphinxcontrib-video",
]
dev = [
    {include-group = "doc"},
    "check-manifest",
    "tox-uv",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",
]

[project.entry-points."napari.manifest"]
napari-animation = "napari_animation:napari.yaml"

[project.urls]
    Homepage = "https://github.com/napari/napari-animation"
    Download = "https://github.com/napari/napari-animation"
    Documentation = "https://napari.org/napari-animation"
    "Bug Tracker" = "https://github.com/napari/napari-animation/issues"
    Source = "https://github.com/napari/napari-animation"

[build-system]
requires = ["setuptools>=82.0.1", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.setuptools_scm]
write_to = "src/napari_animation/_version.py"
fallback_version = "0.0.1+nogit"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
# filterwarnings = ["error"]  # recommended by PP309; deprecation warnings cause failures so leaving for the user to enable if desired
log_cli_level = "INFO"
testpaths = ["tests"]
[tool.ruff]
line-length = 79
fix = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E", "F", "W", #flake8
    "UP", # pyupgrade
    "I", # isort
    "BLE", # flake8-blind-exception
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "ISC", # flake8-implicit-str-concat
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "SIM", # flake8-simplify
]
ignore = [
    "A004",  # Import `pow` is shadowing a Python builtin, we want to use the math module's pow
    "E501", # line too long. handled by formatter
    "UP006", "UP007", # type annotation. As using magicgui require runtime type annotation then we disable this.
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError()",
]

[tool.check-manifest]
ignore = [
  ".pre-commit-config.yaml",
  "napari_animation/_version.py",
  "tox.ini",
]
