[metadata]
name = napari_animation
url = https://github.com/napari/napari-animation
download_url = https://github.com/napari/napari-animation
license = BSD 3-Clause
license_file = LICENSE
description = napari animation plugin
long_description = file: README.md
long_description_content_type = text/markdown
# author = napari team
# author_email = napari-steering-council@googlegroups.com


[options]
zip_safe = False
packages = find:
include_package_data = True
install_requires =
    napari>=0.4
   

[options.entry_points]
pytest11 =
    napari = napari.utils._testsupport


[isort]
profile = black
multi_line_output=3


[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to re-enable, but takes work
ignore = E203,W503,E501,C901
max-line-length = 79
max-complexity = 18
exclude = _vendor,vendored,__init__.py,examples,benchmarks,napari/resources/_qt_resources*.py


[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError()


[tool:pytest]
addopts = --durations=10
filterwarnings =
    ignore::DeprecationWarning
