[metadata]
name = napari_animation
url = https://github.com/napari/napari-animation
download_url = https://github.com/napari/napari-animation
license = BSD 3-Clause
license_file = LICENSE
description = A plugin for making animations in napari
long_description = file: README.md
long_description_content_type = text/markdown
author = Nicholas Sofroniew, Alister Burt, Guillaume Witz, Faris Abouakil, Talley Lambert
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Visualization
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
zip_safe = False
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
	imageio
	imageio-ffmpeg
	napari
	npe2
	numpy
	qtpy
	scipy
      tqdm>=4.56.0
    superqt


[options.extras_require]
testing =
    pytest
    pytest-qt
    qtbot
dev =
    pre-commit
    black
    flake8
    isort
    check-manifest
    PyQt5>=5.12.3,!=5.15.0
    %(testing)s


[options.entry_points]
napari.manifest =
    napari-animation = napari_animation:napari.yaml

[options.package_data]
napari-animation = napari.yaml

[isort]
profile = black
line_length = 79
skip_glob = examples/
multi_line_output=3


[flake8]
# Ignores - https://lintlyci.github.io/Flake8Rules
# E203  Whitespace before ':'  (sometimes conflicts with black)
# E501 line too long (84 > 79 characters)  (sometimes too annoying)
# W503	Line break occurred before a binary operator
# C901 McCabe complexity test. Would be nice to re-enable, but takes work
ignore = E203,W503,E501,C901
max-line-length = 79
max-complexity = 18
exclude = __init__.py,examples


[coverage:report]
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
    raise NotImplementedError()


[tool:pytest]
addopts = --durations=10
filterwarnings =
    ignore::DeprecationWarning


[tool:check-manifest]
ignore =
    pre-commit-config.yaml
    napari_animation/_version.py  # added during build by setuptools_scm
    tox.ini
